[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Background/loading.gd" type="Script" id=1]
[ext_resource path="res://Textures/Set/Restart (1).png" type="Texture" id=2]
[ext_resource path="res://Textures/Set/Restart (2).png" type="Texture" id=3]
[ext_resource path="res://Textures/Set/Restart (3).png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Loading" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 180.0
margin_bottom = 308.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="ProgressBar" parent="CanvasLayer/Loading"]
margin_right = 1920.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneTimer" type="Timer" parent="CanvasLayer/Loading"]
wait_time = 0.5
one_shot = true

[node name="Main" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="CanvasLayer/Main"]
margin_right = 128.0
margin_bottom = 135.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[connection signal="timeout" from="CanvasLayer/Loading/DoneTimer" to="." method="_on_DoneTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Main/Play" to="." method="_on_Play_pressed"]
